# wlgame

./: PKGBUILD  README.md  meson.build  wlgame.desktop
include/: config.h  gpu.h  launch.h  nvidia.h  output.h  server.h  upscale.h  view.h
shaders/: cas.comp  fsr1_easu.comp  fsr1_rcas.comp  nis.comp
src/: gpu.c  input.c  launch.c  layer.c  main.c  nvidia.c  output.c  server.c  upscale.c  view.c  xwayland.c
